<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Driver.driverLogin"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="10dp">


    <ImageView
        android:layout_width="194dp"
        android:layout_height="125dp"
        android:src="@drawable/driverimg"
        android:contentDescription="@string/todo3" />

    <TextView
        android:id="@+id/la_logoname"
        android:layout_width="wrap_content"
        android:layout_height="103dp"
        android:layout_marginTop="-15dp"
        android:fontFamily="@font/bungee"
        android:text="@string/hello_driver_welcome_back"
        android:textAlignment="viewStart"
        android:textColor="@color/font_color"
        android:textSize="34sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/hi_enter_the_credentials_you_have_receive_from_your_institute"
        android:textAlignment="viewStart"
        android:textColor="@color/font_color"
        android:textSize="16sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Busid"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            android:textColorHint="@color/font_color"
            app:placeholderTextColor="@color/font_color"
            app:hintTextColor="@color/font_color"
            app:hintEnabled="true"
            app:boxStrokeColor="@color/font_color">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck"
                android:textColor="@color/font_color"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/DLPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            app:helperTextTextColor="@color/font_color"
            app:placeholderTextColor="@color/font_color"
            app:hintTextColor="@color/font_color"
            app:boxStrokeColor="@color/font_color"
            app:counterTextColor="@color/font_color"
            app:passwordToggleTint="@color/font_color"
            app:hintEnabled="true"
            android:textColorHint="@color/font_color"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck,TextContrastCheck"
                android:textColor="@color/font_color"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/driverRememberMe"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/font_color"
                    android:fontFamily="@font/antic"
                    android:text="@string/remember_me"
                    android:textColor="@color/font_color"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:fontFamily="@font/antic"
                    android:text="@string/forgot_password"
                    android:textSize="13sp"
                    android:textColor="@color/font_color"

                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btnFindBus"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/go"
            android:textColor="#fff"
            android:backgroundTint="#000"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <RelativeLayout
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/whitecircle"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:elevation="8dp"
            />
    </RelativeLayout>


</LinearLayout>