<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_bg"
    tools:context=".User.UserBottomSheet"
    android:elevation="3dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/antic"
        android:text="@string/select_bus"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TvBusid"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enter_bus_id"
        android:textColorHint="@color/font_color"
        app:boxStrokeColor="@color/font_color"
        app:hintAnimationEnabled="false"
        app:hintEnabled="true"
        app:hintTextColor="@color/font_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:placeholderTextColor="@color/font_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:textColor="@color/font_color"
            android:textColorHint="#757575"
            android:inputType="number"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/FButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"

        android:backgroundTint="#000"
        android:text="@string/get_bus_location"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvBusid" />

</androidx.constraintlayout.widget.ConstraintLayout>